Track Product::list

--- a/Resources/views/Analytics/product.js.twig
+++ b/Resources/views/Analytics/product.js.twig
@@ -8,10 +8,11 @@
   {% if google_analytics.hasProducts("remove") %}
   {% for product in google_analytics.getProducts("remove") %}
   ga('{{ google_analytics.trackerName(key) }}ec:addProduct', { // Provide product details in an productFieldObject.
-    'id': '{{ product.id | escape('js') }}',            // Product ID (string).
+    'id': '{{ product.id | escape('js') }}',             // Product ID (string).
     'name': '{{ product.title | escape('js') }}',        // Product name (string).
     'category': '{{ product.category | escape('js') }}', // Product category (string).
     'brand': '{{ product.brand | escape('js') }}',       // Product brand (string).
+    'list': '{{ product.list | escape('js') }}',         // Product list (string).
     'variant': '{{ product.variant | escape('js') }}',   // Product variant (string).
     'price': '{{ product.price | escape('js') }}',       // Product price (currency).
     'coupon': '{{ product.coupon | escape('js') }}',     // Product coupon (string).
@@ -24,10 +25,11 @@
   {% if google_analytics.hasProducts("add") %}
   {% for product in google_analytics.getProducts("add") %}
   ga('{{ google_analytics.trackerName(key) }}ec:addProduct', { // Provide product details in an productFieldObject.
-    'id': '{{ product.id | escape('js') }}',            // Product ID (string).
+    'id': '{{ product.id | escape('js') }}',             // Product ID (string).
     'name': '{{ product.title | escape('js') }}',        // Product name (string).
     'category': '{{ product.category | escape('js') }}', // Product category (string).
     'brand': '{{ product.brand | escape('js') }}',       // Product brand (string).
+    'list': '{{ product.list | escape('js') }}',         // Product list (string).
     'variant': '{{ product.variant | escape('js') }}',   // Product variant (string).
     'price': '{{ product.price | escape('js') }}',       // Product price (currency).
     'coupon': '{{ product.coupon | escape('js') }}',     // Product coupon (string).
@@ -40,10 +42,11 @@
   {% if google_analytics.hasProducts("click") %}
   {% for product in google_analytics.getProducts("click") %}
   ga('{{ google_analytics.trackerName(key) }}ec:addProduct', { // Provide product details in an productFieldObject.
-    'id': '{{ product.id | escape('js') }}',            // Product ID (string).
+    'id': '{{ product.id | escape('js') }}',             // Product ID (string).
     'name': '{{ product.title | escape('js') }}',        // Product name (string).
     'category': '{{ product.category | escape('js') }}', // Product category (string).
     'brand': '{{ product.brand | escape('js') }}',       // Product brand (string).
+    'list': '{{ product.list | escape('js') }}',         // Product list (string).    
     'variant': '{{ product.variant | escape('js') }}',   // Product variant (string).
     'price': '{{ product.price | escape('js') }}',       // Product price (currency).
     'coupon': '{{ product.coupon | escape('js') }}',     // Product coupon (string).
@@ -56,10 +59,11 @@
   {% if google_analytics.hasProducts("detail") %}
   {% for product in google_analytics.getProducts("detail") %}
   ga('{{ google_analytics.trackerName(key) }}ec:addProduct', { // Provide product details in an productFieldObject.
-    'id': '{{ product.id | escape('js') }}',            // Product ID (string).
+    'id': '{{ product.id | escape('js') }}',             // Product ID (string).
     'name': '{{ product.title | escape('js') }}',        // Product name (string).
     'category': '{{ product.category | escape('js') }}', // Product category (string).
     'brand': '{{ product.brand | escape('js') }}',       // Product brand (string).
+    'list': '{{ product.list | escape('js') }}',         // Product list (string).    
     'variant': '{{ product.variant | escape('js') }}',   // Product variant (string).
     'price': '{{ product.price | escape('js') }}',       // Product price (currency).
     'coupon': '{{ product.coupon | escape('js') }}',     // Product coupon (string).
