--- a/Resources/views/TagManager/tagmanager.html.twig
+++ b/Resources/views/TagManager/tagmanager.html.twig
@@ -1,4 +1,4 @@
-{% if google_tag_manager.hasContainerId() %}
+{% if google_tag_manager is defined and google_tag_manager.hasContainerId() %}
 <!-- Google Tag Manager -->
 <noscript>
     <iframe src="//www.googletagmanager.com/ns.html?id={{ google_tag_manager.containerId }}" height="0" width="0" style="display:none;visibility:hidden"></iframe>
